# Tech-3-IA

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  STREAMLIT_README.md  app.py  pyproject.toml  quick_start.py  requirements.txt  streamlit_app.py  test_adapters_manual.py
DataSets/: split_dataset.html
configs/: guardrails_config.yaml  langchain_config.yaml  model_config.yaml  qlora_config.yaml
data/patients/: patient_PAC-0001.json  patient_PAC-0002.json  patient_PAC-0003.json  patient_PAC-0004.json  patient_PAC-0005.json  patient_PAC-0006.json  patient_PAC-0007.json  patient_PAC-0008.json  patient_PAC-0009.json  patient_PAC-0010.json  patient_PAC-0011.json  patient_PAC-0012.json  patient_PAC-0013.json  patient_PAC-0014.json  patient_PAC-0015.json  patient_PAC-0016.json  patient_PAC-0017.json  (+3 more)
evaluation_results/: benchmark_ollama-llama3_1773006796.json  benchmark_ollama-llama3_1773010898.json  benchmark_ollama-llama3_1773102401.json  benchmark_ollama-llama3_1773102837.json  benchmark_ollama-llama3_1773185465.json  benchmark_ollama-llama3_1773185669.json  benchmark_ollama-llama3_1773186112.json  predictions_ollama-llama3_1773006796.jsonl  predictions_ollama-llama3_1773010898.jsonl  predictions_ollama-llama3_1773102401.jsonl  predictions_ollama-llama3_1773102837.jsonl  predictions_ollama-llama3_1773185465.jsonl  predictions_ollama-llama3_1773185669.jsonl  predictions_ollama-llama3_1773186112.jsonl
medical_assistant/: __init__.py  __main__.py
reports/: generate_visualizations.py  technical_report.md
tests/: conftest.py
(+60 files in other folders)
